--- a/templates/auto-corrector.html
+++ b/templates/auto-corrector.html
@@ -36,15 +36,15 @@
 <div class="container">
   <div class="row py-5 mt-4 align-items-center">
       <!-- For Demo Purpose -->
-      <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
-          <img src="https://bootstrapious.com/i/snippets/sn-registeration/illustration.svg" alt="" class="img-fluid mb-3 d-none d-md-block">
+      <div class="col-lg-6 col-md-6 col-sm-12 mb-md-0">
+          <img src="https://bootstrapious.com/i/snippets/sn-registeration/illustration.svg" alt="" class="img-fluid">
           <h1>Auto Corrector Like your phone !</h1>
           <p class="font-italic text-muted mb-0">auto corrector using simple NLP Model.</p>
          
       </div>
 
       <!-- Registeration Form -->
-      <div class="col-md-7 col-lg-6 ml-auto">
+      <div class="col-lg-6 col-md-6 ml-auto">
         <p class="text-justify text-center font-alatsi h4">simple auto corrector using probablites and Edit Distance.</p>
 
         <form>
@@ -88,11 +88,11 @@
         
             </div>
             <div class="row">
-                <ul class="col-lg-6 d-flex justify-content-center list-group py-4 font-alatsi h5" id="suggestionslist">
+                <ul class="col-lg-5 d-flex justify-content-center list-group py-4 font-alatsi h5 px-2" id="suggestionslist">
                     
                 </ul>
               
-              <ul class="col-lg-6 d-flex justify-content-center list-group py-4 font-alatsi h5" id="EditDistancelist">
+              <ul class="col-lg-5 d-flex justify-content-center list-group py-4 font-alatsi h5 px-2" id="EditDistancelist">
               </ul>
                   
                 </div>
