--- a/templates/auto-corrector.html
+++ b/templates/auto-corrector.html
@@ -26,7 +26,7 @@
       <div class="container">
           <!-- Navbar Brand -->
           <a href="#" class="navbar-brand">
-          <p class="font-alatsi">Mr Algorithms</p>
+          <p class="font-alatsi h4">Mr Algorithms</p>
           </a>
       </div>
   </nav>
@@ -34,26 +34,25 @@
 
 
 <div class="container">
-  <div class="row py-5 mt-4 align-items-center">
+  <div class="row py-3 mt-4 align-items-center">
       <!-- For Demo Purpose -->
       <div class="col-lg-6 col-md-6 col-sm-12 mb-md-0">
           <img src="https://bootstrapious.com/i/snippets/sn-registeration/illustration.svg" alt="" class="img-fluid">
           <h1>Auto Corrector Like your phone !</h1>
-          <p class="font-italic text-muted mb-0">auto corrector using simple NLP Model.</p>
+          <p class="font-italic text-muted mb-0">auto corrector and Edit Distance.</p>
          
       </div>
 
       <!-- Registeration Form -->
       <div class="col-lg-6 col-md-6 ml-auto">
-        <p class="text-justify text-center font-alatsi h4">simple auto corrector using probablites and Edit Distance.</p>
-
+        <div class="col-lg-12 mx-auto mb-0">
+          <button class="btn btn-primary btn-block py-2 my-4">
+              <span class="font-weight-bold h4">Demo Using small dictionary</span>
+          </button>
+      </div>
         <form>
               <div class="row">
-                <div class="col-lg-12 mx-auto mb-0">
-                  <button class="btn btn-primary btn-block py-2 my-4">
-                      <span class="font-weight-bold">This a smiple demo using shakespear txt vocab (no large dictionary used)</span>
-                  </button>
-              </div>
+           
                   <!-- First Name -->
                   <div class="input-group col-lg-6 mb-4">
                       <div class="input-group-prepend">
@@ -73,29 +72,21 @@
                   </div>
 
                   <!-- Divider Text -->
-                 
+                  <div class="container">
+                    <div class="col-lg-12 mx-auto d-flex align-items-center my-4">
+                        <div class="border-bottom w-100 ml-5"></div>
+                        <span class="px-2 small text-muted font-weight-bold text-muted">Suggestions and Edit Distances</span>
+                        <div class="border-bottom w-100 mr-5"></div>
+                  
+                    </div>
                  
 
 
               </div>
           </form>
 
-          <div class="container">
-            <div class="col-lg-12 mx-auto d-flex align-items-center my-4">
-                <div class="border-bottom w-100 ml-5"></div>
-                <span class="px-2 small text-muted font-weight-bold text-muted">Suggestions and Edit Distances</span>
-                <div class="border-bottom w-100 mr-5"></div>
         
-            </div>
-            <div class="row">
-                <ul class="col-lg-5 d-flex justify-content-center list-group py-4 font-alatsi h5 px-2" id="suggestionslist">
-                    
-                </ul>
-              
-              <ul class="col-lg-5 d-flex justify-content-center list-group py-4 font-alatsi h5 px-2" id="EditDistancelist">
-              </ul>
-                  
-                </div>
+          
               
         
             </div>
@@ -105,6 +96,17 @@
   </div>
 </div>
 
+ <div class="container">
+  <div class="row">
+    <ul class="col-lg-6 d-flex justify-content-center list-group py-4 font-alatsi h5 px-2" id="suggestionslist">
+        
+    </ul>
+  
+  <ul class="col-lg-6 d-flex justify-content-center list-group py-4 font-alatsi h5 px-2" id="EditDistancelist">
+  </ul>
+      
+    </div>
+ </div>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
